--- a/views/content/film/highViewFilms.ejs
+++ b/views/content/film/highViewFilms.ejs
@@ -3,8 +3,8 @@
         <div class="col-md-3 col-sm-3 movie-item">
             <div class="article-movie-home">
                 <a href="/phim/<%= highViewFilms[i].film_ID %>">
-                    <img id="img-film-indexContent" src="<%= highViewFilms[i].film_Image %>" alt="Không load được ảnh"
-                        width="216" height="324">
+                    <img id="img-film-indexContent film-form" src="<%= highViewFilms[i].film_Image %>" alt="Không load được ảnh"
+                        width="185" height="260">
                 </a>
                 <div class="movie-technology">
                 </div>
