--- a/views/content/film/nowShowingFilms.ejs
+++ b/views/content/film/nowShowingFilms.ejs
@@ -3,7 +3,7 @@
         <div class="col-md-3 col-sm-3 movie-item">
             <div class="article-movie-home">
                 <a href="/phim/<%= nowShowingFilms[i].film_ID %>" class="product-image">
-                    <img id="img-film-indexContent" src="<%= nowShowingFilms[i].film_Image %>" alt="Không load được ảnh"
+                    <img id="img-film-indexContent film-form" src="<%= nowShowingFilms[i].film_Image %>" alt="Không load được ảnh"
                     style="height: 260px;
                     width: 185px;"
                     >
