--- a/public/css/home.css
+++ b/public/css/home.css
@@ -86,7 +86,7 @@
         }
         
         .navbar-default .navbar-nav>li>a {
-            color: #777;
+            color: black;
             font-weight: bold;
         }
         
@@ -146,7 +146,7 @@
         
         .film-lists .feature_film_content h3 {
             color: #fff;
-            font-size: 15px;
+            font-size: 18px;
             font-weight: 600;
             margin: 10px 0;
             overflow: hidden;
@@ -540,9 +540,10 @@
         .btn-primary:hover,
         .btn-primary:active:hover,
         .btn-primary:active {
-            color: #777;
+            color:black;
             background-color: #ffff;
             border-color: #ffff;
+            outline: none;
         }
         
         .btn-primary {
@@ -550,6 +551,7 @@
             font-weight: 600;
             background-color: #dfc7c1;
             border-color: #ffff;
+            outline: none;
         }
         
         .content-rap-box-btn:hover {
