--- a/views/admin.ejs
+++ b/views/admin.ejs
@@ -13,8 +13,9 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" />
 
     <!-- MỚI THÊM FONT AWESOME 04/06/2021 -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w==" crossorigin="anonymous" referrerpolicy="no-referrer"
-    />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
+        integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 
 <body>
@@ -28,7 +29,9 @@
             text-white text-decoration-none
           ">
                 <div class="logo logo--medium">
-                    <a href="/ " class="router-link-active"><img src="/public/image/Logo-Dien-03.png " alt="Một Chút Phim Accounts " class="logo-image" style="width: 150px; margin-top: 30px;" /></a>
+                    <a href="/ " class="router-link-active"><img src="/public/image/Logo-Dien-03.png "
+                            alt="Một Chút Phim Accounts " class="logo-image"
+                            style="width: 150px; margin-top: 30px;" /></a>
                 </div>
             </a>
             <ul class="nav nav-pills flex-column mb-auto">
@@ -37,14 +40,19 @@
                     <a href="/admin" id="logo" class="active">Admin</a>
                 </li>
                 <li>
-                    <i> <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="24px" height="24px" viewBox="0 0 24 24" version="1.1">
-                        <g stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
-                            <rect x="0" y="0" width="24" height="24"></rect>
-                            <path d="M2.56066017,10.6819805 L4.68198052,8.56066017 C5.26776695,7.97487373 6.21751442,7.97487373 6.80330086,8.56066017 L8.9246212,10.6819805 C9.51040764,11.267767 9.51040764,12.2175144 8.9246212,12.8033009 L6.80330086,14.9246212 C6.21751442,15.5104076 5.26776695,15.5104076 4.68198052,14.9246212 L2.56066017,12.8033009 C1.97487373,12.2175144 1.97487373,11.267767 2.56066017,10.6819805 Z M14.5606602,10.6819805 L16.6819805,8.56066017 C17.267767,7.97487373 18.2175144,7.97487373 18.8033009,8.56066017 L20.9246212,10.6819805 C21.5104076,11.267767 21.5104076,12.2175144 20.9246212,12.8033009 L18.8033009,14.9246212 C18.2175144,15.5104076 17.267767,15.5104076 16.6819805,14.9246212 L14.5606602,12.8033009 C13.9748737,12.2175144 13.9748737,11.267767 14.5606602,10.6819805 Z" fill="#000000" opacity="0.3"></path>
-                            <path d="M8.56066017,16.6819805 L10.6819805,14.5606602 C11.267767,13.9748737 12.2175144,13.9748737 12.8033009,14.5606602 L14.9246212,16.6819805 C15.5104076,17.267767 15.5104076,18.2175144 14.9246212,18.8033009 L12.8033009,20.9246212 C12.2175144,21.5104076 11.267767,21.5104076 10.6819805,20.9246212 L8.56066017,18.8033009 C7.97487373,18.2175144 7.97487373,17.267767 8.56066017,16.6819805 Z M8.56066017,4.68198052 L10.6819805,2.56066017 C11.267767,1.97487373 12.2175144,1.97487373 12.8033009,2.56066017 L14.9246212,4.68198052 C15.5104076,5.26776695 15.5104076,6.21751442 14.9246212,6.80330086 L12.8033009,8.9246212 C12.2175144,9.51040764 11.267767,9.51040764 10.6819805,8.9246212 L8.56066017,6.80330086 C7.97487373,6.21751442 7.97487373,5.26776695 8.56066017,4.68198052 Z" fill="#000000"></path>
-                        </g>
-                    </svg></i>
-                    <a href="/admin/showtime">Quản lý xuất chiếu</a>
+                    <i> <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="24px"
+                            height="24px" viewBox="0 0 24 24" version="1.1">
+                            <g stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
+                                <rect x="0" y="0" width="24" height="24"></rect>
+                                <path
+                                    d="M2.56066017,10.6819805 L4.68198052,8.56066017 C5.26776695,7.97487373 6.21751442,7.97487373 6.80330086,8.56066017 L8.9246212,10.6819805 C9.51040764,11.267767 9.51040764,12.2175144 8.9246212,12.8033009 L6.80330086,14.9246212 C6.21751442,15.5104076 5.26776695,15.5104076 4.68198052,14.9246212 L2.56066017,12.8033009 C1.97487373,12.2175144 1.97487373,11.267767 2.56066017,10.6819805 Z M14.5606602,10.6819805 L16.6819805,8.56066017 C17.267767,7.97487373 18.2175144,7.97487373 18.8033009,8.56066017 L20.9246212,10.6819805 C21.5104076,11.267767 21.5104076,12.2175144 20.9246212,12.8033009 L18.8033009,14.9246212 C18.2175144,15.5104076 17.267767,15.5104076 16.6819805,14.9246212 L14.5606602,12.8033009 C13.9748737,12.2175144 13.9748737,11.267767 14.5606602,10.6819805 Z"
+                                    fill="#000000" opacity="0.3"></path>
+                                <path
+                                    d="M8.56066017,16.6819805 L10.6819805,14.5606602 C11.267767,13.9748737 12.2175144,13.9748737 12.8033009,14.5606602 L14.9246212,16.6819805 C15.5104076,17.267767 15.5104076,18.2175144 14.9246212,18.8033009 L12.8033009,20.9246212 C12.2175144,21.5104076 11.267767,21.5104076 10.6819805,20.9246212 L8.56066017,18.8033009 C7.97487373,18.2175144 7.97487373,17.267767 8.56066017,16.6819805 Z M8.56066017,4.68198052 L10.6819805,2.56066017 C11.267767,1.97487373 12.2175144,1.97487373 12.8033009,2.56066017 L14.9246212,4.68198052 C15.5104076,5.26776695 15.5104076,6.21751442 14.9246212,6.80330086 L12.8033009,8.9246212 C12.2175144,9.51040764 11.267767,9.51040764 10.6819805,8.9246212 L8.56066017,6.80330086 C7.97487373,6.21751442 7.97487373,5.26776695 8.56066017,4.68198052 Z"
+                                    fill="#000000"></path>
+                            </g>
+                        </svg></i>
+                    <a href="/admin/showtime">Quản lý suất chiếu</a>
                 </li>
                 <li>
                     <i class="fas fa-tasks me-2"></i>
@@ -68,39 +76,35 @@
             </ul>
         </div>
 
-        <div style="width: 1060px; float: left; right: 20px; margin-left: 280px;">
-            <% if(typeof thuocTinhFilm !=='undefined' && typeof thuocTinhCumRap
-        !=='undefined' ) { %>
-                <% include admin/BangDoanhThu.ejs %>
+        <div style="width: 1222px; float: left; right: 20px; margin-left: 280px;">
+            <% if(typeof filmStatistic !=='undefined' && typeof cineplexStatistic !=='undefined' ) { %>
+                <% include admin/stats %>
                     <% } %>
-                        <%
-        if(typeof showtime !=='undefined' ) { %>
+                        <% if(typeof showtime !=='undefined' ) { %>
                             <% include admin/showtime %>
-                                <%
-        } %>
+                                <% } %>
                                     <% if(typeof showtimesByFilm !=='undefined' ) { %>
-                                        <% include
-        admin/showtimesByFilm %>
+                                        <% include admin/showtimesByFilm %>
                                             <% } %>
-                                                <% if(typeof showtimesByCinema
-        !=='undefined' ) { %>
+                                                <% if(typeof showtimesByCinema !=='undefined' ) { %>
                                                     <% include admin/showtimesByCinema %>
                                                         <% } %>
-                                                            <%
-        if(typeof cinema !=='undefined' ) { %>
+                                                            <% if(typeof cinema !=='undefined' ) { %>
                                                                 <% include admin/cinema.ejs %>
-                                                                    <%
-        } %>
+                                                                    <% } %>
                                                                         <% if(typeof userAll !=='undefined' ) { %>
-                                                                            <% include
-        admin/userAll.ejs %>
+                                                                            <% include admin/userAll.ejs %>
                                                                                 <% } %>
-                                                                                    <% if(typeof filmAll !=='undefined' ) { %>
+                                                                                    <% if(typeof filmAll !=='undefined'
+                                                                                        ) { %>
                                                                                         <% include admin/filmAll.ejs %>
                                                                                             <% } %>
                                                                                                 <% if(typeof cineplex
-        !=='undefined' ) { %>
-                                                                                                    <% include admin/cineplex.ejs %>
+                                                                                                    !=='undefined' ) {
+                                                                                                    %>
+                                                                                                    <% include
+                                                                                                        admin/cineplex.ejs
+                                                                                                        %>
                                                                                                         <% } %>
         </div>
     </div>
