--- a/views/admin/cinema.ejs
+++ b/views/admin/cinema.ejs
@@ -2,7 +2,7 @@
     <div id="crud_error" value="<%= crud_error %>" hidden></div>
     <% } %>
         <a id="btn_create_cinema" class="btn_create">Thêm rạp</a>
-        <h1 style="text-align: center; font-weight: 600;">DANH SÁCH RẠP</h1>
+        <h1 class="admin-title">DANH SÁCH RẠP</h1>
         <div class="container">
             <div id="table">
                 <% if(cinema) { %>
