--- a/views/admin/filmAll.ejs
+++ b/views/admin/filmAll.ejs
@@ -2,7 +2,7 @@
     <div id="crud_error" value="<%= crud_error %>" hidden></div>
     <% } %>
         <a style="width:auto" class="btn_create" id="btn_create_film">Thêm phim</a>
-        <h1 style="text-align: center;  font-weight: 600">DANH SÁCH PHIM</h1>
+        <h1 class="admin-title">DANH SÁCH PHIM</h1>
         <div class="container">
             <div id="table">
                 <% if(filmAll) { %>
