--- a/views/admin/showtime.ejs
+++ b/views/admin/showtime.ejs
@@ -1,8 +1,10 @@
 <% if(typeof(crud_error) !='undefined' ) { %>
     <div id="crud_error" value="<%= crud_error %>" hidden></div>
     <% } %>
+
+
         <a id="btn_create_showtime" class="btn_create">Thêm suất chiếu</a>
-        <h1 style="text-align: center;font-weight: 600">DANH SÁCH SUẤT CHIẾU</h1>
+        <h1 class="admin-title">DANH SÁCH SUẤT CHIẾU</h1>
 
 
         <div class="container">
@@ -35,11 +37,7 @@
                                 <td>
 
                                     <% var d=new Date(showtime[i].showtime_Date); %>
-                                        <%= d.getDate(); %>
-                                            /
-                                            <%= d.getMonth()+1; %>
-                                                /
-                                                <%= d.getFullYear(); %>
+                                        <%= d.getDate(); %>/<%= d.getMonth()+1; %>/<%= d.getFullYear(); %>
                                 </td>
                                 <td>
                                     <%= showtime[i].showtime_Begin.substr(0,5) %> -
